--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,7 +9,7 @@ local:
 amazon:
  service: S3
  region: ap-northeast-1
- bucket: testuser-1
+ bucket: forum-lastapp-2022-09-23
  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
  secret_access_key:  <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
 
